--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <p>Not yet, but progress is being made!</p>
 <h2>Related features</h2>
 <ul id="features"></ul>
-<a href="https://github.com/upsuper/areweasyncyet.rs"><img id="github" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+<a class="github-ribbon" href="https://github.com/upsuper/areweasyncyet.rs">Fork me on GitHub</a>
 </body>
 </html>
