Split features into blockers and future extensions

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <body>
 <h1>Are we <code>async</code> yet?</h1>
 <p>Not yet, but progress is being made!</p>
-<h2>Related features</h2>
-<ul id="features"></ul>
+<h2>Blockers</h2>
+<ul id="blockers"></ul>
+<h2>Future extensions</h2>
+<ul id="extensions"></ul>
 <a class="github-ribbon" href="https://github.com/upsuper/areweasyncyet.rs">Fork me on GitHub</a>
 </body>
 </html>
