Clarify several pieces

--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
 <script src="main.js" defer></script>
 <body>
 <h1>Are we <code>async</code> yet?</h1>
-<p>Not yet, but progress is being made!</p>
-<h2>Blockers</h2>
-<ul id="blockers"></ul>
-<h2>Future extensions</h2>
-<ul id="extensions"></ul>
+<p>For <code>async</code> syntax, not yet, but progress is being made!</p>
+<p>Although the more ergonomic syntax is not ready yet,
+  asynchronously I/O is already possible in Rust with
+  ecosystem around <a href="https://crates.io/crates/futures">futures</a>,
+  <a href="https://crates.io/crates/mio">mio</a>, and
+  <a href="https://crates.io/crates/tokio">tokio</a>.</p>
+<h2><code>async</code> syntax and blockers</h2>
+<ul id="async-blockers"></ul>
+<h3>Future extensions</h3>
+<ul id="async-extensions"></ul>
 <a class="github-ribbon" href="https://github.com/upsuper/areweasyncyet.rs">Fork me on GitHub</a>
 </body>
 </html>
