--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>Are we <code>async</code> yet?</h1>
 <p>For <code>async</code> syntax, not yet, but progress is being made!</p>
 <p>Although the more ergonomic syntax is not ready yet,
-  asynchronously I/O is already possible in Rust with
+  asynchronous I/O is already possible in Rust with
   ecosystem around <a href="https://crates.io/crates/futures">futures</a>,
   <a href="https://crates.io/crates/mio">mio</a>, and
   <a href="https://crates.io/crates/tokio">tokio</a>.</p>
