async ecosystem suggestion

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <ul id="async-blockers"></ul>
 <h3>Future extensions</h3>
 <ul id="async-extensions"></ul>
+<h2><code>async</code> ecosystem</h2>
+<ul id="async-ecosystem"></ul>
 <a class="github-ribbon" href="https://github.com/upsuper/areweasyncyet.rs">Fork me on GitHub</a>
 </body>
 </html>
